--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@aws-amplify/ui-react": "^5.3.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
