--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "^5.3.2",
+    "@aws-sdk/client-secrets-manager": "^3.14.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@googlemaps/js-api-loader": "^1.16.2",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,10 +18,12 @@
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.16",
     "aws-amplify": "^5.3.12",
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
