--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.18.63",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.16",
+    "@types/uuid": "^9.0.7",
     "aws-amplify": "^5.3.12",
     "axios": "^1.6.2",
     "date-and-time": "^3.0.3",
@@ -26,6 +27,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
